force-app/main/default/objects/DynaDocTemplate__c/DynaDocTemplate__c.object-meta.xml
<CustomObject>
    <label>DynaDoc Template</label>
    <nameField>
        <label>DynaDoc Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DynaDoc Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>