force-app/main/default/objects/DynaDocTemplate__c/fields/DynaDocQuery__c.field-meta.xml
<CustomField>
    <fullName>DynaDocQuery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DynaDoc Query</label>
    <referenceTo>DynaDocQuery__c</referenceTo>
    <relationshipLabel>DynaDoc Templates</relationshipLabel>
    <relationshipName>DynaDocTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>