force-app/main/default/objects/DynaDocTemplate__c/fields/InternalName__c.field-meta.xml
<CustomField>
    <fullName>InternalName__c</fullName>
    <label>Internal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>