force-app/main/default/objects/DynaDocTemplate__c/fields/TemplateLanguage__c.field-meta.xml
<CustomField>
    <fullName>TemplateLanguage__c</fullName>
    <label>Template Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>