force-app/main/default/objects/DynaDocTemplate__c/fields/TemplateLegal__c.field-meta.xml
<CustomField>
    <fullName>TemplateLegal__c</fullName>
    <label>Template Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLC</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>GBDE</fullName>
            </value>
            <value>
                <fullName>GBCH</fullName>
            </value>
            <value>
                <fullName>GBUS</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>SVH</fullName>
            </value>
            <value>
                <fullName>GBSG</fullName>
            </value>
            <value>
                <fullName>HILDA</fullName>
            </value>
            <value>
                <fullName>HoM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>