force-app/main/default/objects/DynaDocTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>