force-app/main/default/objects/DynaDocTemplate__c/listViews/All_Cancellation.listView-meta.xml
<ListView>
    <fullName>All_Cancellation</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <columns>DynaDocQuery__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Cancellation</value>
    </filters>
    <label>All - Cancellation</label>
    <language>de</language>
</ListView>