force-app/main/default/objects/DynaDocTemplate__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Invoice</value>
    </filters>
    <label>All - Invoices</label>
    <language>de</language>
</ListView>