force-app/main/default/objects/DynaDocTemplate__c/listViews/CY.listView-meta.xml
<ListView>
    <fullName>CY</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CY</value>
    </filters>
    <label>CY</label>
    <language>de</language>
</ListView>