force-app/main/default/objects/DynaDocTemplate__c/listViews/GBDE.listView-meta.xml
<ListView>
    <fullName>GBDE</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GBDE</value>
    </filters>
    <label>GBDE</label>
    <language>de</language>
</ListView>