force-app/main/default/objects/DynaDocTemplate__c/listViews/GBSG.listView-meta.xml
<ListView>
    <fullName>GBSG</fullName>
    <columns>NAME</columns>
    <columns>InternalName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>TemplateLanguage__c</columns>
    <columns>TemplateLegal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GBSG</value>
    </filters>
    <label>GBSG</label>
    <language>en_US</language>
</ListView>